# Musae

./: .clang-format  .gitignore  CMakeLists.txt  MANUAL.md  Musae.c++  README.md
MuCT/: Example2_reconstruct.ipynb  Example2_visualize.ipynb  ML_EM_reconstruct.ipynb  ML_EM_visualize.ipynb  requirements_muCT.txt
MuCT/input/Terrain/: SimBox_Nx2_Ny2.csv
Mugrid_Dataprocess/cmake/: MusaeCompileConfig.cmake
Mugrid_Dataprocess/data/Flux_model/: Survival_to_Ecut_table_pmin3.csv
Mugrid_Dataprocess/data/Stl_model/: ConcreteWall_Unit_mm.stl  Tianqin_MCMCTest_12_23_B_Unitmm.stl
Mugrid_Dataprocess/scripts/: Example2.md  Example2.yaml  Example2_fs.yaml  vis.mac
Mugrid_Dataprocess/src/app/analysis/Musae/AnaOpacity/: AnaOpacity.c++  AnaOpacity.h++  AnaProcess.c++  AnaProcess.h++
Mugrid_Dataprocess/src/app/analysis/Musae/Projection/: ProjectProcess.c++  ProjectProcess.h++  Projection.c++  Projection.h++
Mugrid_Dataprocess/src/app/reconstruction/Musae/ReconLGA/: FormatChannelSummary.h++  PlaneEfficiencyTest.c++  PlaneEfficiencyTest.h++  ReconLGA.c++  ReconstructAllHit.c++  ReconstructAllHit.h++  ReconstructCRMu.c++  ReconstructCRMu.h++  ReconstructHit.c++  ReconstructHit.h++
Mugrid_Dataprocess/src/app/simulation/: CMakeLists.txt
Mugrid_Dataprocess/src/app/simulation/Musae/SimFlux/: Analysis.c++  Analysis.h++  PhysicsList.c++  PhysicsList.h++  RunManager.c++  SimFlux.c++  SimFlux.h++
Mugrid_Dataprocess/src/app/simulation/Musae/SimFlux/Action/: ActionInitialization.h++  DetectorConstruction.c++  DetectorConstruction.h++  EventAction.c++  EventAction.h++  PrimaryGeneratorAction.c++  PrimaryGeneratorAction.h++  RunAction.c++  RunAction.h++  SteppingAction.c++  SteppingAction.h++
Mugrid_Dataprocess/src/app/simulation/Musae/SimFlux/Messenger/: PhysicsMessenger.c++  PhysicsMessenger.h++
Mugrid_Dataprocess/src/app/simulation/Musae/SimFlux/SD/: LGASD.c++  LGASD.h++
Mugrid_Dataprocess/src/app/simulation/Musae/SimFlux/scripts/: SimFlux.yaml  run.mac
Mugrid_Dataprocess/src/app/utility/Musae/GenCRMu/: CLI.c++  CLI.h++  CRMuEvent.h++  GenCRMu.c++  Generator.c++
Mugrid_Dataprocess/src/app/visualization/Musae/VisLGA/: EventIDFilter.c++  (+2 more)
Mugrid_Dataprocess/src/lib/: CMakeLists.txt
Mugrid_Dataprocess/terrain/: SimBox_Nx2_Ny2.csv  test_flatdata_Nx2_Ny2.csv
Mugrid_Reconstract/: Example2_reconstruct.ipynb  Example2_visualize.ipynb  requirements_muCT.txt
Musae-main/: .clang-format  CMakeLists.txt  Musae.c++  README.md
Musae-main/cmake/: GlobalCompileConfig.cmake  LookForMustard.cmake  LookForPMP.cmake  LookForTurtle.cmake
Musae-main/data/Stl_model/: ConcreteWallWithCubeHole0p7_Unit_mm.stl  StellPlate_Unit_mm.stl  Tianqin_MCMCTest_12_23_A_Unitmm.stl  Tianqin_MCMCTest_12_23_C_Unitmm.stl
Musae-main/document/doxygen/: Doxyfile
Musae-main/scripts/: Example1.mac  Example1.md  Example1.yaml  Example2.mac  Example2.md  Material.gdml  vis.mac
Musae-main/src/app/: CMakeLists.txt
Musae-main/src/app/utility/: CMakeLists.txt
Musae-main/src/app/visualization/: CMakeLists.txt
Musae-main/src/app/visualization/Musae/VisLGA/: EventIDFilter.c++  EventIDFilter.h++  EventPlot.c++  EventPlot.h++  Type.h++  VisLGA.c++  VisLGA.h++
Musae-main/src/lib/data/: CMakeLists.txt
Musae-main/src/lib/reconstruction/: CMakeLists.txt
Musae-main/src/lib/reconstruction/Musae/Reconstruction/: dummy.c++
Musae-main/src/lib/reconstruction/Musae/Reconstruction/Fitter/: Fitter.h++  FitterBase.h++  FitterBase.inl  TruthFitter.h++  TruthFitter.inl
cmake/: LookForMustard.cmake  LookForSomething.cmake.template
src/app/: CMakeLists.txt
src/app/analysis/: CMakeLists.txt
src/app/analysis/Musae/AnaOpacity/: AnaOpacity.c++
src/app/reconstruction/: CMakeLists.txt
src/app/reconstruction/Musae/ReconHit/: CLI.c++  CLI.h++  CMakeLists.txt  ReconHit.c++  Reconstruct.c++  Reconstruct.h++  Type.h++
src/app/reconstruction/Musae/ReconLGA/: CMakeLists.txt  FormatChannelSummary.c++  FormatChannelSummary.h++  PlotEvent.c++  PlotEvent.h++  ReconLGA.c++  ReconLGA.h++  ReconstructAllHit.c++  ReconstructAllHit.h++  ReconstructCRMu.c++  ReconstructCRMu.h++  ReconstructHit.c++  ReconstructHit.h++  Type.h++
src/app/scripts/: example_run.bash  reconstruction_example.bash  simulation_example.bash
src/app/simulation/: CMakeLists.txt
src/app/simulation/Musae/SimFlux/: Analysis.c++  Analysis.h++  CMakeLists.txt  DefaultMacro.h++  PhysicsList.c++  PhysicsList.h++  RunManager.h++  SimFlux.c++
src/app/simulation/Musae/SimFlux/Action/: ActionInitialization.c++  ActionInitialization.h++  DetectorConstruction.c++  DetectorConstruction.h++  EventAction.c++  EventAction.h++  PrimaryGeneratorAction.c++  PrimaryGeneratorAction.h++  RunAction.c++  RunAction.h++  SteppingAction.c++  SteppingAction.h++
src/app/simulation/Musae/SimFlux/Messenger/: DetectorMessenger.h++  PhysicsMessenger.c++  PhysicsMessenger.h++
src/app/simulation/Musae/SimFlux/SD/: LGASD.h++
src/app/simulation/Musae/SimFlux/scripts/: SimFlux.yaml  SimTerrain.yaml  run.mac  vis.mac
src/app/utility/: CMakeLists.txt
src/app/utility/Musae/GenCRMu/: CLI.c++  CLI.h++  CMakeLists.txt  CRMuEvent.c++  GenCRMu.c++  GenCRMu.h++  Generator.c++  Generator.h++
src/app/visualization/Musae/VisLGA/: EventPlot.c++  EventPlot.h++  Type.h++  VisLGA.c++  VisLGA.h++
src/lib/data/: CMakeLists.txt
src/lib/data/Musae/Data/: Digi.h++  Event.h++  Hit.h++  SimEvent.h++  SimHit.h++
src/lib/detector/: CMakeLists.txt
src/lib/detector/Musae/Detector/Definition/: LGA.c++  Terrain.c++
src/lib/detector/Musae/Detector/Description/: LGA.c++  LGA.h++  Terrain.c++  Terrain.h++  World.c++
src/lib/reconstruction/: CMakeLists.txt
src/lib/reconstruction/Musae/Reconstruction/Fitter/: Fitter.h++  FitterBase.inl  TruthFitter.h++  TruthFitter.inl
src/lib/simulation/: CMakeLists.txt
src/lib/simulation/Musae/Simulation/Digi/: LGAFastDigi.h++
src/lib/simulation/Musae/Simulation/Digitizer/: LGADigitizerBase.c++  LGADigitizerBase.h++  LGAFastDigitizer.c++
src/lib/simulation/Musae/Simulation/Hit/: LGAHit.h++
src/lib/simulation/Musae/Simulation/SD/: LGASD.c++  LGASD.h++
(+126 files in other folders)
